--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -32,9 +32,9 @@
     --clr-mark_title: #fb5940;
     --clr-mark_subtitle: #ab4d3a;
 
-    --bg_dark-primary: #3a291d;
-    --bg_dark-secondary: #222222;
-    --bg_dark-component: #282120;
+    --bg_dark-primary: #1d1d1d;
+    --bg_dark-secondary: #282120;
+    --bg_dark-component: #3a291d;
 
     --bg_light-primary: #fafafa;
     --bg_light-secondary: #efebe2;
@@ -70,7 +70,7 @@
     --fnt-link_commom: italic small-caps 400 1rem/1.5rem 'Lato', sans-serif;
     --fnt-link_special: italic 400 1.125rem/1.5rem 'Lato', sans-serif;
     
-    --transition: .6s ease-in-out;
+    --transition: .4s ease-in-out;
     --box_shadow-light: 10px 10px 9px 4px rgba(157,146,126,1);
     --box_shadow-dark: 10px 10px 12px 4px rgba(51,51,51,1);
 
@@ -95,7 +95,7 @@ html[data-theme='dark']{
     --title-clr: var(--clr_dark-title_primary);
     --subtitle-clr: var(--clr_dark-title_secondary);
     --text-clr: var(--clr_dark-text_primary);
-    --bg-clr: var(--bg_dark-component);
+    --bg-clr: var(--bg_dark-primary);
     --bg-btn: var(--bg-button_primary);
     --btn-clr: var(--clr_dark-text_primary);
     --btn-link-clr: var(--primary-clr); 
@@ -121,7 +121,7 @@ main{
 
 section{
     margin: 0 auto;
-    padding: 1.75rem;
+    padding: .75rem;
 }
 
 h1{
@@ -151,7 +151,13 @@ a{
     color: var(--primary-clr);
 }
 
+ul{
+    list-style-position: inside;
+}
+
 /* CLASS */
+
+/* widths */
 
 .w30{
     max-width: 30%;
@@ -169,6 +175,73 @@ a{
     width: 100%;
 }
 
+/* margin */
+
+.m-0{
+    margin: 0 .25rem;
+}
+
+.m-1{
+    margin: 0 .5rem;
+}
+
+.m-2{
+    margin: 0 .75rem;
+}
+.m-3{
+    margin: 0 1rem;
+}
+
+.mTB-0{
+    margin: .25rem;
+}
+
+.mTB-1{
+    margin: .5rem;
+}
+
+.mTB-2{
+    margin: .75rem;
+}
+
+.mTB-3{
+    margin: 1rem;
+}
+
+/* padding */
+
+.p-0{
+    padding: 0 .25rem;
+}
+
+.p-1{
+    padding: 0 .5rem;
+}
+
+.p-2{
+    padding: 0 .75rem;
+}
+.p-3{
+    padding: 0 1rem;
+}
+
+.pTB-0{
+    padding: .25rem;
+}
+
+.pTB-1{
+    padding: .5rem;
+}
+
+.pTB-2{
+    padding: .75rem;
+}
+
+.pTB-3{
+    padding: 1rem;
+}
+
+/* titles */
 
 .heading,.caption, .text_box{
     padding: .65rem 0;
@@ -189,6 +262,7 @@ a{
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    text-align: center;
 }
 
 .caption::after{
@@ -200,6 +274,8 @@ a{
     margin-top: .75rem;
     background-color: var(--clr-mark_subtitle);
 }
+
+/* buttom */
 
 .btn{
     text-decoration: none;
@@ -215,6 +291,8 @@ a{
     border: none;
 }
 
+/* link */
+
 .link_menu{
     font: var(--fnt-link_menu);
     color: var(--btn-clr);
@@ -224,6 +302,19 @@ a{
 .special_link{
     font: var(--fnt-link_special);
     color: var(--clr_dark-text_primary);
+}
+
+.link_buttom{
+    color: var(--text-button);
+    background: var(--bg-button_primary);
+    padding: .25rem .5rem;
+    border-radius: .5rem;
+    transition: var(--transition);
+    text-decoration: none;
+}
+
+.link_buttom:hover{
+    background: var(--bg-button_component);
 }
 
 /* Header */
@@ -248,7 +339,7 @@ footer{
     background: var(--bg-footer);
 }
 
-/* media query */
+/* MEDIA QUERY */
 
 @media screen and (min-width: 641px) {
     html{
