--- a/frontend/views/header.ejs
+++ b/frontend/views/header.ejs
@@ -20,7 +20,7 @@
             <div class="nav">
                 <div class="navbar">
                     <ul class="menu_desktop">
-                        <li><a href="<%= index %>" class="link_menu">Home</a></li>
+                        <li><a href="<%= index %>" class="link_menu">Pagina Inicial</a></li>
                         <li><a href="<%= index %>" class="link_menu">Sobre</a></li>
                         <li><a href="<%= projects %>" class="link_menu">Projetos</a></li>
                         <li><a href="<%= cursos %>" class="link_menu">Cursos</a></li>
