--- a/frontend/views/header.ejs
+++ b/frontend/views/header.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="images/logo/FundoEscuro.png" type="image/x-icon">
-    <title><%= title %></title>
+    <title></title>
     <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/24ae7fcf09.js" crossorigin="anonymous"></script>
 </head>
@@ -20,19 +20,19 @@
             <div class="nav">
                 <div class="navbar">
                     <ul class="menu_desktop">
-                        <li><a href="<%= index %>" class="link_menu">Pagina Inicial</a></li>
-                        <li><a href="<%= index %>" class="link_menu">Sobre</a></li>
-                        <li><a href="<%= projects %>" class="link_menu">Projetos</a></li>
-                        <li><a href="<%= cursos %>" class="link_menu">Cursos</a></li>
-                        <li><a href="<%= index %>" class="link_menu">Contatos</a></li>
+                        <li><a href="/" class="link_menu">Home</a></li>
+                        <li><a href="/" class="link_menu">Sobre</a></li>
+                        <li><a href="/projects" class="link_menu">Projetos</a></li>
+                        <li><a href="/cursos" class="link_menu">Cursos</a></li>
+                        <li><a href="/" class="link_menu">Contatos</a></li>
                     </ul><!--menu_desktop-->
                     <ul class="menu_mobile">
                         <span><i class="fa-solid fa-2xl fa-bars"></i></span>
-                        <li><a href="<%= index %>" class="link_menu">Home</a></li>
-                        <li><a href="<%= index %>" class="link_menu">Sobre</a></li>
-                        <li><a href="<%= index %>" class="link_menu">Projetos</a></li>
-                        <li><a href="<%= index %>" class="link_menu">Cursos</a></li>
-                        <li><a href="<%= index %>" class="link_menu">Contatos</a></li>
+                        <li><a href="/" class="link_menu">Home</a></li>
+                        <li><a href="/" class="link_menu">Sobre</a></li>
+                        <li><a href="/projects" class="link_menu">Projetos</a></li>
+                        <li><a href="/cursos" class="link_menu">Cursos</a></li>
+                        <li><a href="/" class="link_menu">Contatos</a></li>
                     </ul><!--menu_mobile-->
                 </div><!--navbar-->
             </div><!--nav-->
