--- a/frontend/views/projects.ejs
+++ b/frontend/views/projects.ejs
@@ -1,7 +1,10 @@
 <%- include('header', { title: 'ManeTech | Projetos' }) -%>
 
 
+<h1 class="heading">PROJETOS!</h1>
+ 
 
-
-
+  
 <%- include('footer') -%>
+
+
