--- a/frontend/views/home.ejs
+++ b/frontend/views/home.ejs
@@ -65,31 +65,14 @@
                     <div class="cards_box">
                         <div class="cards_content">
                             <!--% projects.forEach(project => { %-->
-                            <div class="card">
-                                <div class="card_header">
-                                    <div class="feature_image">
-                                        <img src="images/image320x240.png" alt="">
-                                    </div><!--feature_image-->
-                                    <div class="image_mini_box">
-                                        <div class="image_mini">
-                                            <img src="images/image320x240.png" alt="">
-                                        </div><!--image_mini-->
-                                        <div class="image_mini">
-                                            <img src="images/image320x240.png" alt="">
-                                        </div><!--image_mini-->
-                                        <div class="image_mini">
-                                            <img src="images/image320x240.png" alt="">
-                                        </div><!--image_mini-->
-                                    </div><!--image_mini_box-->
-                                </div><!--card_header-->
-                                <div class="card_body">
-                                    <h3>NOme</h3>
-                                    <p>Descrição do projeto desenvolvido</p>
-                                </div><!--card_body-->
-                                <div class="card_footer">
-                                    <a href="http://manexstore.com.br" target="_blank" rel="noopener noreferrer" class="link_buttom">Saiba mais</a>
-                                </div><!--card_footer-->
-                            </div><!--card-->
+                                <div class="card m-auto my-3" style="width: 18rem;">
+                                    <img src="images/image320x240.png" class="card-img-top" alt="...">
+                                    <div class="card-body">
+                                      <h5 class="card-title">Card title</h5>
+                                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                                    </div>
+                                  </div>
                             <!--% }) %-->
                         </div><!--cards_content-->
                         <div class="button_projects">
