--- a/frontend/views/cursos.ejs
+++ b/frontend/views/cursos.ejs
@@ -1,7 +1,5 @@
-<%- include('header', { title: 'ManeTech | Cursos' }) -%>
-
-
-<h1 class="heading">Cursos</h1>
-
-
-<%- include('footer') -%>
+<div>
+    <h1 class="heading">Meus Cursos</h1>
+    <h2 class="caption">Esta página lista todos meus cursos.</h2>
+    <p>Este é apenas um exemplo de texto para verificação de páginas.</p>
+</div>
