--- a/frontend/views/home.ejs
+++ b/frontend/views/home.ejs
@@ -1,13 +1,13 @@
 
     
-    <main>
+    
         <div class="container">
             <section id="banner" class="banner">
                 <div class="banner_content">
                     <div class="banner_content_box">
                         <div class="greeting">
                             <div class="greeting_text">
-                                <h2 class="good_morning">Bom dia</h2>
+                                <h2 class="good_morning">Olá Mundo!</h2>
                                 <h3>Seja Bem Vindo!</h3>
                                 <p class="greeting_phrase">Está um dia lindo hoje!</p>
                             </div>
@@ -137,21 +137,8 @@
                     <h2 class="caption">Entre em contato</h2>
                 </div>
             </section>
-        
-        
-        
-        
-        
-        
-        
-        
-        
+
         
         </div><!--container-->
 
-
-
-
-
-    </main>
     
