--- a/frontend/views/projects.ejs
+++ b/frontend/views/projects.ejs
@@ -1,10 +1,7 @@
-<%- include('header', { title: 'ManeTech | Projetos' }) -%>
-
-
-<h1 class="heading">PROJETOS!</h1>
- 
-
-  
-<%- include('footer') -%>
+<div>
+    <h1 class="heading">Meus Projetos</h1>
+    <h2 class="caption">Esta página lista todos meus projetos</h2>
+    <p>Este é apenas um exemplo de texto para verificação de páginas.</p>
+</div>
 
 
