--- a/frontend/views/layouts/main.ejs
+++ b/frontend/views/layouts/main.ejs
@@ -8,37 +8,38 @@
     <link rel="shortcut icon" href="images/logo/FundoEscuro.png" type="image/x-icon">
     <title><%= title %></title>
     <link rel="stylesheet" href="css/style.css">
-    <script src="https://kit.fontawesome.com/24ae7fcf09.js" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 </head>
 <body>
 
-    <header>
-        <div class="divTop">
-            <div class="logo">
-                <div class="img_logo">
-                    <img src="images/logo/LogoTransp120.png" alt="logomarca, círculo azul com as iniciais MT e o nome ManexTech">
-                </div>
+    <header class="d-flex justify-content-around">
+        <div class="logo navbar-brand ">
+            <div class="img_logo">
+                <img src="images/logo/LogoTransp120.png" width="80px" height="80px" alt="logomarca, círculo azul com as iniciais MT e o nome ManexTech">
             </div>
-            <div class="nav">
-                <div class="navbar">
-                    <ul class="menu_desktop">
+        </div>
+        <div class="nav d-flex justify-content-end">
+            <div class="navbar">
+                <ul class="menu_desktop">
+                    <li><a href="/" class="link_menu">Home</a></li>
+                    <li><a href="/about" class="link_menu">Sobre</a></li>
+                    <li><a href="/projects" class="link_menu">Projetos</a></li>
+                    <li><a href="/cursos" class="link_menu">Cursos</a></li>
+                    <li><a href="" class="link_menu">Contatos</a></li>
+                </ul><!--menu_desktop-->
+                <ul class="menu_mobile">
+                    <div class="icon_menu"><i class="bi bi-menu-down"></i></div>
+                    <div class="nav_mobile">
                         <li><a href="/" class="link_menu">Home</a></li>
                         <li><a href="/about" class="link_menu">Sobre</a></li>
                         <li><a href="/projects" class="link_menu">Projetos</a></li>
                         <li><a href="/cursos" class="link_menu">Cursos</a></li>
                         <li><a href="" class="link_menu">Contatos</a></li>
-                    </ul><!--menu_desktop-->
-                    <ul class="menu_mobile">
-                        <span><i class="fa-solid fa-2xl fa-bars"></i></span>
-                        <li><a href="/" class="link_menu">Home</a></li>
-                        <li><a href="/about" class="link_menu">Sobre</a></li>
-                        <li><a href="/projects" class="link_menu">Projetos</a></li>
-                        <li><a href="/cursos" class="link_menu">Cursos</a></li>
-                        <li><a href="" class="link_menu">Contatos</a></li>
-                    </ul><!--menu_mobile-->
-                </div><!--navbar-->
-            </div><!--nav-->
-        </div><!--divTop-->
+                    </div>
+                </ul><!--menu_mobile-->
+            </div><!--navbar-->
+        </div><!--nav-->
     </header>
 
 <main>
@@ -58,5 +59,6 @@
 </footer>
 
     <script src="js/scripts.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </body>
 </html>
